# aiorussound

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  pyproject.toml  setup.py  sonar-project.properties  tox.ini
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md
.github/workflows/: build.yml  pages.yml  publish.yml  python-matrix-test.yml  release.yml
aiorussound/: __init__.py  connection.py  const.py  devices.json  exceptions.py  models.py  rio.py  util.py
aiorussound/rio/: __init__.py  client.py  models.py
aiorussound/rnet/: __init__.py  client.py  models.py
examples/: basic.py  rnet.py  subscribe.py
tests/: __init__.py  test_util.py  test_zoneid.py
